--- a/docs/IIA1319.md
+++ b/docs/IIA1319.md
@@ -2,3 +2,4 @@
 
 ## UML
 [UML Basics with PlantUML (YouTube)](https://www.youtube.com/playlist?list=PLrzWQu7Ajpi1w4XAi6leIdvYGEdtHt9j3)
+[A Beginner's Guide to PlantUML Class Diagrams](https://www.webdevtutor.net/blog/beginner-guide-plantuml-class-diagrams)
